Y overflow on fixed menu.

--- a/sites/all/themes/osbee/css/osbee.css
+++ b/sites/all/themes/osbee/css/osbee.css
@@ -3256,7 +3256,7 @@ select.with-style option[selected="selected"] {
   .not-front #drawer-menu {
     position: fixed;
     top: 0;
-    height: 100vh;
+    overflow-y: auto;
     width: 80%;
     z-index: 100;
     bottom: 0;
