--- a/sites/all/themes/osbee/sass/_responsive.scss
+++ b/sites/all/themes/osbee/sass/_responsive.scss
@@ -315,7 +315,6 @@ $xlarge: 1024px;
             height: 50px;
 
         }
-
         #drawer-menu-overlay {
             top: 0;
             bottom: 0;
@@ -330,7 +329,8 @@ $xlarge: 1024px;
         #drawer-menu {
             position: fixed;
             top: 0;
-            height: 100vh;
+            //height: 100vh;
+            overflow-y: auto;
             width: 80%;
             z-index: 100;
             bottom: 0;
